automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -472,31 +472,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Argentina',\n",
-       " 'Canada',\n",
-       " 'Croatia',\n",
+       "['Malta',\n",
+       " 'Argentina',\n",
        " 'Finland',\n",
        " 'Italy',\n",
-       " 'Malta',\n",
-       " 'Mexico',\n",
-       " 'Morocco',\n",
        " 'South Korea',\n",
-       " 'USA'}"
+       " 'Morocco',\n",
+       " 'Croatia',\n",
+       " 'Canada',\n",
+       " 'USA',\n",
+       " 'Mexico']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "unique_countries # ['Canada', 'Italy', 'USA', 'Mexico', 'Finland', \n",
+    "list(unique_countries) # ['Canada', 'Italy', 'USA', 'Mexico', 'Finland', \n",
     "#'Malta', 'Morocco', 'Croatia', 'Argentina', 'South Korea']"
    ]
   },
