automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -467,7 +467,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = set(countries)"
+    "unique_countries = set(countries)\n",
+    "list"
    ]
   },
   {
@@ -496,7 +497,7 @@
     }
    ],
    "source": [
-    "list(unique_countries) # ['Canada', 'Italy', 'USA', 'Mexico', 'Finland', \n",
+    "unique_countries # ['Canada', 'Italy', 'USA', 'Mexico', 'Finland', \n",
     "#'Malta', 'Morocco', 'Croatia', 'Argentina', 'South Korea']"
    ]
   },
