--- a/index.ipynb
+++ b/index.ipynb
@@ -496,25 +496,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Malta',\n",
-       " 'Argentina',\n",
+       "{'Argentina',\n",
+       " 'Canada',\n",
+       " 'Croatia',\n",
        " 'Finland',\n",
        " 'Italy',\n",
-       " 'South Korea',\n",
+       " 'Malta',\n",
+       " 'Mexico',\n",
        " 'Morocco',\n",
-       " 'Croatia',\n",
-       " 'Canada',\n",
-       " 'USA',\n",
-       " 'Mexico']"
+       " 'South Korea',\n",
+       " 'USA'}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
