--- a/index.ipynb
+++ b/index.ipynb
@@ -491,7 +491,7 @@
    ],
    "source": [
     "unique_countries = set(countries)\n",
-    "list(countries)"
+    "list(uncountries)"
    ]
   },
   {
