--- a/index.ipynb
+++ b/index.ipynb
@@ -463,40 +463,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Croatia',\n",
-       " 'USA',\n",
+       "['Malta',\n",
        " 'Argentina',\n",
-       " 'Mexico',\n",
-       " 'USA',\n",
-       " 'Morocco',\n",
-       " 'USA',\n",
        " 'Finland',\n",
-       " 'Argentina',\n",
        " 'Italy',\n",
-       " 'Canada',\n",
        " 'South Korea',\n",
-       " 'Malta']"
+       " 'Morocco',\n",
+       " 'Croatia',\n",
+       " 'Canada',\n",
+       " 'USA',\n",
+       " 'Mexico']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "unique_countries = set(countries)\n",
-    "list(uncountries)"
+    "list(unique_countries)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +511,7 @@
        " 'USA'}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
