--- a/index.ipynb
+++ b/index.ipynb
@@ -517,7 +517,7 @@
     }
    ],
    "source": [
-    "unique_countries # ['Canada', 'Italy', 'USA', 'Mexico', 'Finland', \n",
+    "list(unique_countries) # ['Canada', 'Italy', 'USA', 'Mexico', 'Finland', \n",
     "#'Malta', 'Morocco', 'Croatia', 'Argentina', 'South Korea']"
    ]
   },
