--- a/index.ipynb
+++ b/index.ipynb
@@ -493,25 +493,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Argentina',\n",
-       " 'Canada',\n",
-       " 'Croatia',\n",
+       "['Malta',\n",
+       " 'Argentina',\n",
        " 'Finland',\n",
        " 'Italy',\n",
-       " 'Malta',\n",
-       " 'Mexico',\n",
-       " 'Morocco',\n",
        " 'South Korea',\n",
-       " 'USA'}"
+       " 'Morocco',\n",
+       " 'Croatia',\n",
+       " 'Canada',\n",
+       " 'USA',\n",
+       " 'Mexico']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
